--- a/backend/chat/templates/chat/room.html
+++ b/backend/chat/templates/chat/room.html
@@ -1,10 +1,12 @@
 <!-- chat/templates/chat/room.html -->
+{% load static%}
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8"/>
     <title>Chat Room</title>
 </head>
+<script src = "{% static 'reconnecting-websocket.js' %}"></script>
 <body>
     <textarea id="chat-log" cols="100" rows="20"></textarea><br>
     <input id="chat-message-input" type="text" size="100"><br>
@@ -14,7 +16,7 @@
         const roomName = JSON.parse(document.getElementById('room-name').textContent);
 
 
-        const chatSocket = new WebSocket(
+        const chatSocket = new ReconnectingWebSocket(
             'ws://'
             + window.location.host
             + '/ws/chat/'
