--- a/frontend/src/containers/Layouts.css
+++ b/frontend/src/containers/Layouts.css
@@ -1,12 +1,15 @@
 .wrap {
-  display: flex;
-  width:60%;
+  /* display: flex; */
+  width:100%;
 }
 
 .test1 {
       padding-left: 250px;
-      flex: 1 1 auto;
       overflow-y: auto;
       min-height: 0px;
 
+}
+
+.wrap .sidebarLayout {
+  float: left;
 }
