--- a/frontend/src/containers/Containers.css
+++ b/frontend/src/containers/Containers.css
@@ -9,3 +9,8 @@
 .site-layout .site-layout-background {
   /* background: #fff; */
 }
+
+
+/* style={{ padding: '0 50px', marginTop: 10, width: 900, marginRight: 'auto', marginLeft: 'auto'}} */
+
+/* style={{ padding: 24, minHeight: 380 }} */
