--- a/frontend/src/containers/CurrUser/CurrUserProfile.css
+++ b/frontend/src/containers/CurrUser/CurrUserProfile.css
@@ -51,7 +51,24 @@
     padding: 15px;
     max-width: 180px;
     margin: -85px auto 0;
-    display: inline-block; }
+    display: inline-block;
+    position: relative; z-index: 100; 
+   }
 
   .owner .name h4 {
     margin-top: 10px; }
+
+
+    .test3{
+      border-radius: 4px 4px 0 0;
+    }
+
+
+    .timeline-cover{
+      background: url("https://images.unsplash.com/photo-1499380848949-2960e980ed02?ixlib=rb-1.2.1&auto=format&fit=crop&w=1900&q=80") no-repeat;
+      background-position: center;
+      background-size: cover;
+      min-height: 360px;
+      border-radius: 0 0 4px 4px;
+      position: relative;
+    }
