--- a/frontend/src/containers/CurrUser/CurrUserProfile.css
+++ b/frontend/src/containers/CurrUser/CurrUserProfile.css
@@ -8,6 +8,18 @@
     font-style: normal;
   }
 
+  .Roboto{font-family:'Roboto';font-weight:400;} /* 400 is industry standard for normal */
+
+  @font-face {
+      font-family: 'Adobe Regular Font';
+      src: local('Adobe Clean Regular'), local('Adobe-Clean-Regular'),
+          url('AdobeClean-Regular.woff2') format('woff2'),
+          url('AdobeClean-Regular.woff') format('woff'),
+          url('AdobeClean-Regular.ttf') format('truetype');
+      font-weight: 400;
+      font-style: normal;
+    }
+
   .test{
     font-family: 'Adobe Clean';
     font-size: 75px;
@@ -16,8 +28,8 @@
 
 
   .test2{
-    font-family: 'Adobe Clean';
-    font-size: 25px;
+
+    font-size: 20px;
 
   }
 
