--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -15,3 +15,10 @@
        url('./OpenSans-Bold.ttf'),
        format('tff');
 }
+
+
+.testwithAnt{
+  font-size: 25px;
+  font-weight:400;
+  color: black;
+}
