--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -1,24 +1,8 @@
-.testFont {
-  font-size: 20px;
-  font-family: OpenSans;
-  font-weight:400;
-  color: black;
-}
 
 
-@font-face {
-  font-family: 'PingTest';
-  font-style: normal;
-  font-weight: 400;
-  src: local('OpenSans Regular'),
-       local('OpenSans-Regular'),
-       url('./OpenSans-Bold.ttf'),
-       format('tff');
-}
+  .RobotoFont{
 
+    font-size: 22px;
+    font-family: 'Roboto', sans-serif;
 
-.testwithAnt{
-  font-size: 25px;
-  font-weight:400;
-  color: black;
-}
+  }
