--- a/frontend/src/containers/Container_CSS/NewCalendar.css
+++ b/frontend/src/containers/Container_CSS/NewCalendar.css
@@ -93,6 +93,7 @@ main {
 /* Do not change this because alot of other parts use this */
 .flex-container {
   display: flex;
+  /* background-color: red; */
 }
 
 .row {
@@ -287,6 +288,64 @@ main {
   color: white;
   left: 10px;
 }
+
+
+/* This is for the minicalendar */
+.miniCalendar .header{
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 110%;
+  padding: 1.5em 0;
+  border-bottom: 1px solid var(--border-color);
+}
+
+.miniCalendar .days{
+  text-transform: uppercase;
+  font-weight: 400;
+  color: ;
+  font-size: 100%;
+  padding: .75em 0;
+  border-bottom: 1px solid var(--border-color);
+  display: flex;
+}
+
+.miniCalendar .miniCol{
+  flex-grow: 1;
+  flex-basis: 0;
+  max-width: 100%;
+  text-align:center;
+}
+
+.miniCalendar .miniRow{
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.miniCalendar .miniBody .miniRow{
+  background-color: red;
+}
+
+.miniCalendar .body .miniCol{
+  flex-grow: 0;
+  flex-basis: calc(100%/7);
+  width: calc(100%/7);
+}
+
+.miniCalendar .body .miniCell{
+  position: relative;
+  height: 3em;
+  width: 5em;
+  /* border-right: 1px solid var(--border-color); */
+  overflow: hidden;
+  cursor: pointer;
+  /* background: var(--neutral-color); */
+  transition: 0.25s ease-out;
+}
+
 
 
 /* This is to control the year view */
