--- a/frontend/src/containers/Container_CSS/NewCalendar.css
+++ b/frontend/src/containers/Container_CSS/NewCalendar.css
@@ -84,8 +84,11 @@ main {
 /* Container that holds Calendar */
 .calendarContainer{
   position: relative;
+  right: 150px;
   width: 1385px;
   bottom: 70px;
+  /* background-color: red; */
+  display: flex;
 }
 
 
@@ -290,8 +293,14 @@ main {
 }
 
 
+.calendarContainer .mainCalContainer{
+  width: 1445px;
+  padding-left: 25px;
+}
+
+
 /* This is for the minicalendar */
-.miniCalendar .header{
+.miniCalContainer .miniCalendar .header{
   text-transform: uppercase;
   font-weight: 700;
   font-size: 110%;
@@ -299,7 +308,7 @@ main {
   border-bottom: 1px solid var(--border-color);
 }
 
-.miniCalendar .days{
+.miniCalContainer .miniCalendar .days{
   text-transform: uppercase;
   font-weight: 400;
   color: ;
@@ -309,14 +318,14 @@ main {
   display: flex;
 }
 
-.miniCalendar .miniCol{
+.miniCalContainer .miniCalendar .miniCol{
   flex-grow: 1;
   flex-basis: 0;
   max-width: 100%;
   text-align:center;
 }
 
-.miniCalendar .miniRow{
+.miniCalContainer .miniCalendar .miniRow{
   margin: 0;
   padding: 0;
   display: flex;
@@ -325,17 +334,17 @@ main {
   width: 100%;
 }
 
-.miniCalendar .miniBody .miniRow{
-  background-color: red;
+.miniCalContainer .miniCalendar .miniBody .miniRow{
+  /* background-color: red; */
 }
 
-.miniCalendar .body .miniCol{
+.miniCalContainer .miniCalendar .body .miniCol{
   flex-grow: 0;
   flex-basis: calc(100%/7);
   width: calc(100%/7);
 }
 
-.miniCalendar .body .miniCell{
+.miniCalContainer .miniCalendar .body .miniCell{
   position: relative;
   height: 3em;
   width: 5em;
@@ -346,6 +355,13 @@ main {
   transition: 0.25s ease-out;
 }
 
+.calendarContainer .miniCalContainer{
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-basis: 20%;
+  position: relative;
+  top: 110px;
+}
 
 
 /* This is to control the year view */
