--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -6,3 +6,28 @@
     font-family: 'Roboto', sans-serif;
 
   }
+.cardborder {
+  border-radius: 35px 35px 35px 15px;
+  box-shadow: 5px 10px 18px #888888;
+
+  }
+
+
+
+  .cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+    grid-gap: 20px;
+}
+
+.card {
+    display: grid;
+    grid-template-rows: max-content 200px 1fr;
+}
+
+.card img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+    
