--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -35,6 +35,8 @@
 
 
 .mock-outer {
+  box-shadow: 5px 5px 10px #888888;
+
   background-color: rgb(255, 255, 255);
 
 
@@ -65,8 +67,7 @@
   border-top-width: 1px;
 
 
-  display: block;
-  font-family: helvetica, arial, 'lucida grande', sans-serif;
+
 
   font-size: 12px;
   height: 250px;
@@ -123,20 +124,19 @@
 
 .usertext {
   color: rgb(20, 24, 35);
-  direction: ltr;
-  display: inline;
-  font-size: 14px;
+
+  font-size: 25px;
   font-weight: normal;
   height: auto;
   line-height: 19.3199996948242px;
   margin-bottom: 0px;
-  margin-left: 0px;
+  margin-left: 10px;
   margin-right: 0px;
-  margin-top: 0px;
+  margin-top: 50px;
   text-align: left;
   width: auto;
   word-wrap: break-word;
-
+   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 .fb-group-picrow img {
