--- a/frontend/src/components/UserProfiles/UserProfileCard.css
+++ b/frontend/src/components/UserProfiles/UserProfileCard.css
@@ -1,12 +1,3 @@
-@font-face {
-    font-family: 'Adobe Clean';
-    src: local('Adobe Clean Light'), local('Adobe-Clean-Light'),
-        url('AdobeClean-Light.woff2') format('woff2'),
-        url('AdobeClean-Light.woff') format('woff'),
-        url('AdobeClean-Light.ttf') format('truetype');
-    font-weight: 300;
-    font-style: normal;
-  }
 
 /* https://bootsnipp.com/snippets/E1xV5
 
@@ -60,16 +51,12 @@
 
 
 
-        .test{
-          font-family: 'Adobe Clean';
-          font-size: 25px;
 
-        }
 
 
 /* delete body IT IS NOT USED */
         body {
-               font-family: 'Adobe Clean';
+               /* font-family: 'Adobe Clean';F */
                color: #989898;
                margin: 10px;
                }
