--- a/frontend/src/containers/CurrUser/CurrUserProfile.css
+++ b/frontend/src/containers/CurrUser/CurrUserProfile.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
     font-family: 'Adobe Clean';
     src: local('Adobe Clean Light'), local('Adobe-Clean-Light'),
         url('AdobeClean-Light.woff2') format('woff2'),
@@ -10,7 +10,7 @@
 
   .Roboto{font-family:'Roboto';font-weight:400;} /* 400 is industry standard for normal */
 
-  @font-face {
+  /* @font-face {
       font-family: 'Adobe Regular Font';
       src: local('Adobe Clean Regular'), local('Adobe-Clean-Regular'),
           url('AdobeClean-Regular.woff2') format('woff2'),
@@ -18,13 +18,13 @@
           url('AdobeClean-Regular.ttf') format('truetype');
       font-weight: 400;
       font-style: normal;
-    }
-
+    } */
+/* 
   .test{
     font-family: 'Adobe Clean';
     font-size: 75px;
 
-  }
+  } */
 
 
   .test2{
