--- a/frontend/src/containers/CurrUser/style.css
+++ b/frontend/src/containers/CurrUser/style.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
     font-family: 'Adobe Clean';
     src: local('Adobe Clean Regular'), local('Adobe-Clean-Regular'),
         url('AdobeClean-Regular.woff2') format('woff2'),
@@ -6,4 +6,4 @@
         url('AdobeClean-Regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
-  }
+  } */
